Fixed layout issues with pre blocks.

--- a/views/styles.less
+++ b/views/styles.less
@@ -118,6 +118,7 @@ pre,
 code
 {
   font-family: Menlo, Consolas, 'Lucida Console', 'Courier New', monospace;
+  font-size: 90%;
 }
 
 blockquote
